2000-01-18  Alain Magloire

	* Rectification the initial patch to add --binary-file option
	was done by Ruslan Ermilov.

2000-01-17  Paul Eggert

	Sync with sources of fileutils 4.0n, tar 1.13.17, glibc 2.1.3a1.
	Convert to ANSI C prototypes (using ansi2knr for backwards
	compatibility), as this makes it easier to sync.

	* configure.in (AC_OBJEXT): Spell in a funny way, to work around
	a bug in automake 1.4 with ansi2knr.
	(LIBOBJS): Add assignment so that .o files in LIBOBJS are also built
	via the ANSI2KNR-filtering rules.
	(AC_OUTPUT): Add src/posix/Makefile.
	* src/Makefile.am (AUTOMAKE_OPTIONS): Add ansi2knr.
	(SUBDIRS): New macro.
	* src/ansi2knr.1, src/ansi2knr.c, src/posix/Makefile.am: New files.
	* src/dfa.c, src/dosbuf.c, src/grep.c, src/kwset.c, src/search.c,
	src/vms_fab.c:
	Use prototypes for function definitions.
	* src/grep.c (main): Use int counter for default context,
	fixing an ANSI portability bug uncovered by the above changes.

	* config.guess, config.sub, install-sh, missing, src/alloca.c,
	src/getpagesize.h, src/memchr.c, src/savedir.c, src/savedir.h,
	src/stpcpy.c:
	Upgrade to latest version from fileutils 4.0n.

	* src/getopt.c, src/getopt.h, src/getopt1.c: Upgrade to latest
	version from tar 1.13.17.

	* src/obstack.c, src/obstack.h, src/regex.c, src/regex.h:
	Upgrade to glibc 2.1.3 alpha 1, with K&R C portability fix.
	* src/posix/regex.h: New file, from glibc 2.1.3 alpha 1.

2000-01-04  Paul Eggert

	Inititial patch from David O'Brien.

	Add --binary-files option.
	* NEWS, doc/grep.1, doc/grep.texi: Document it.
	* src/grep.c (BINARY_FILES_OPTION): New constant.
	(long_options, grep, usage, main): New --binary-files option.
	(binary_files): New var.
	* src/system.h (TYPE_SIGNED, TYPE_MINIMUM, TYPE_MAXIMUM, CHAR_MAX):
	New macros.
	(INT_MAX, UCHAR_MAX): Define in terms of TYPE_MAXIMUM.

2000-01-04  Paul Eggert

	* savedir.c (savedir): Don't store past the end of an array if
	name_size is zero and the directory is empty.