@@ -8,7 +8,7 @@ AC_DEFINE(GREP)
 AC_PREREQ(2.13)
 
 dnl Automake stuff.
-AM_INIT_AUTOMAKE(grep, 2.4a)
+AM_INIT_AUTOMAKE(grep, 2.4b)
 AM_CONFIG_HEADER(config.h:config.hin)
 
 dnl Checks for programs.
